Add ffbad club roster update to sync players current ranking and retrieve profile for automatic signup. Add waiting list for new users when profile is not found
